Update project java-springboot-helloworld-sqldb-portal-mssql

--- a/azure-sql-databases/java-springboot-helloworld-sqldb-portal-mssql/src/main/resources/application.yml
+++ b/azure-sql-databases/java-springboot-helloworld-sqldb-portal-mssql/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:sqlserver://javatechie.database.windows.net:1433;database=javatechiedb;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-    username: javatechie
-    password: password@123
+    url: jdbc:sqlserver://helloworld-srv.database.windows.net:1433;database=helloworld-db;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+    username:
+    password:
   jpa:
     show-sql: true
     hibernate:
