--- a/azure-storage-account/java-springboot-helloworld-azurestorageaccount-upload-download/pom.xml
+++ b/azure-storage-account/java-springboot-helloworld-azurestorageaccount-upload-download/pom.xml
@@ -33,6 +33,12 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		
+		<dependency>
+    		<groupId>com.azure</groupId>
+    		<artifactId>azure-storage-blob</artifactId>
+    		<version>12.21.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
