--- a/azure-storage-account/java-springboot-helloworld-azurestorageaccount-upload-download/src/main/resources/application.properties
+++ b/azure-storage-account/java-springboot-helloworld-azurestorageaccount-upload-download/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-service.helloworld.message = Hello World!
+azure.blob.connection=BlobEndpoint=https://mikesdemostorageaccount.blob.core.windows.net/;QueueEndpoint=https://mikesdemostorageaccount.queue.core.windows.net/;FileEndpoint=https://mikesdemostorageaccount.file.core.windows.net/;TableEndpoint=https://mikesdemostorageaccount.table.core.windows.net/;SharedAccessSignature=sv=2019-10-10&ss=bfqt&srt=sco&sp=rwdlacupx&se=2020-06-30T18:55:51Z&st=2020-06-30T10:55:51Z&spr=https&sig=YRxcBuMbHd%2BetTTqavSjuOP1aAVwZB7HRk1TfATOXEY%3D
+azure.blob.container=mikesblobcontainer
